Fixed alignment issues on project view

--- a/app/sass/partials/_layouts.scss
+++ b/app/sass/partials/_layouts.scss
@@ -18,9 +18,6 @@ section#right {
 #content {
 	width: 100%;
 	position: relative;
-}
-
-.view {
 	max-width: 1100px;
 	min-width: 600px;
 	margin: 0 auto;
